--- a/assets/base.css
+++ b/assets/base.css
@@ -297,6 +297,8 @@ a {
     html, body {
         height: 100%;
         overflow-x: hidden;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
     }
 
     #page {
