--- a/_includes/ceiling.html
+++ b/_includes/ceiling.html
@@ -1,43 +1,41 @@
 <div id="ceiling">
-  <div class="bd clearfix">
-    <span class="products">
+  <div class="bd justify">
+    <div class="products dib">
       <a href="/magix">
-        <i class="iconfont mi-magix"></i>
+        <i class="iconlogo mi-magix"></i>
         <span class="name">Magix</span>
       </a>
       <a href="/brix-core">
-        <i class="iconfont mi-brix"></i>
+        <i class="iconlogo mi-brix"></i>
         <span class="name">Brix</span>
       </a>
       <a href="/crox">
-        <i class="iconfont mi-crox"></i>
+        <i class="iconlogo mi-crox"></i>
         <span class="name">Crox</span>
       </a>
       <a href="http://rap.alibaba-inc.com">
-        <i class="iconfont mi-rap"></i>
+        <i class="iconlogo mi-rap"></i>
         <span class="name">RAP</span>
       </a>
       <a href="http://mockjs.com">
-        <i class="iconfont mi-mock"></i>
+        <i class="iconlogo mi-mock"></i>
         <span class="name">Mock</span>
       </a>
       <a href="https://github.com/nuysoft/bisheng">
-        <i class="iconfont mi-bisheng"></i>
+        <i class="iconlogo mi-bisheng"></i>
         <span class="name">Bisheng</span>
       </a>
       <a href="/cube">
-        <i class="iconfont mi-cube"></i>
+        <i class="iconlogo mi-cube"></i>
         <span class="name">Cube</span>
       </a>
       <a href="http://canvax.org">
-        <i class="iconfont mi-canvax"></i>
+        <i class="iconlogo mi-canvax"></i>
         <span class="name">Canvax</span>
       </a>
-    </span>
-    <span class="portal">
-      <a href="/" class="logo"><i class="iconfont">&#532;</i>
-        <span class="name">THX</span>
-      </a>
-    </span>
+    </div>
+    <div class="portal dib">
+      <a href="javascript:;" id="J_settingsToggler" title="设置"><i class="iconfont">&#355;</i></a>
+    </div>
   </div>
 </div>
