--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,13 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <!-- 优先使用IE最新版本和 Chrome -->
-  <meta name="viewport" content="initial-scale=1, maximum-scale=2, minimum-scale=1">
-  <meta name="apple-mobile-web-app-title" content="Cube">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="format-detection" content="telephone=no" />
+{% include meta.html %}
   <title>{% if page.title %}{{ page.title }} - {% endif %} Cube 样式解决方案 - THX</title>
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/neat.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/src/layout.css">
