--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,7 +28,7 @@ script: assets/post.js
     <a href="javascript:void(0)" class="toggler" id="J_toggler">
       <i class="iconfont">&#271;</i> 导航
     </a>
-    <a href="{{ site.baseurl }}/" class="logo"><i class="iconlogo mi-cube"></i><span class="logo-text">Cube</span></a>
+    <a href="{{ site.baseurl }}/" class="logo dib-box"><i class="iconlogo mi-cube dib"></i><span class="logo-text dib">Cube</span></a>
     <ul class="menu">
     {% for category in site.categories %}
       <li>
