--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/base.css">
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/assets/style.css">
 </head>
-<body bx-app>
+<body bx-app class="skin-cube">
   {{ content }}
   {% include scripts.html %}
 </body>
