--- a/assets/base.css
+++ b/assets/base.css
@@ -153,8 +153,6 @@ a {
 }
 #nav .logo {
     display: block;
-    width: 160px;
-    overflow: hidden;
     text-align: center;
     line-height: 60px;
     vertical-align: middle;
@@ -172,38 +170,16 @@ a {
     line-height: 30px;
 }
 
-#nav .logo .dib {
-    vertical-align: middle;
-}
-
 #nav .iconlogo {
+    font-size: 80px;
     color: #fff;
-    /*width: 130px;*/
-    font-size: 56px;
-}
-
-#nav .logo-text {
-    color: #fff;
-    font-size: 32px;
-    margin-left: 10px;
-}
-
-#nav.fixed .iconlogo {
-    font-size: 30px;
-}
-
-#nav.fixed .logo-text {
-    font-size: 20px;
+    display: block;
+    width: 130px;
 }
 
 /**
  * 皮肤
  */
-
-/* 首页 */
-.skin-index #nav .iconlogo {
-    font-size: 80px;
-}
 
 .skin-index #nav.fixed .iconlogo {
     font-size: 50px;
@@ -451,7 +427,7 @@ a {
         padding-bottom: 5px;
     }
 
-    #nav .logo {
+    #nav .iconlogo {
         width: 100%;
     }
 
