--- a/assets/base.css
+++ b/assets/base.css
@@ -211,19 +211,19 @@ a {
 
 
 .skin-magix #nav a.logo {
-    color: #da1e38;
+    background-color: #da1e38;
 }
 
 .skin-cube #nav a.logo {
-    color: #0e76bc;
+    background-color: #0e76bc;
 }
 
 .skin-brix-core #nav a.logo {
-    color: #0e76bc;
+    background-color: #0e76bc;
 }
 
 .skin-crox #nav a.logo {
-    color: #0e76bc;
+    background-color: #22a478;
 }
 
 
