--- a/_includes/ceiling.html
+++ b/_includes/ceiling.html
@@ -1,6 +1,9 @@
 <div id="ceiling">
   <div class="bd justify">
     <div class="products dib">
+      <a href="/">
+        <i class="iconfont mi-home">&#336;</i>
+      </a>
       <a href="/magix">
         <i class="iconlogo mi-magix"></i>
         <span class="name">Magix</span>
