--- a/assets/base.css
+++ b/assets/base.css
@@ -1141,7 +1141,7 @@ h5:hover .anchor-link {
     margin-top: 16px;
     position: relative;
     border: 1px solid #ddd;
-    border-bottom: 0 none;
+    margin-bottom: -1px;
     border-radius: 3px 3px 0 0; 
 }
 
@@ -1163,3 +1163,7 @@ h5:hover .anchor-link {
     margin: 0;
 }
 
+.type-demo .btn {
+    margin-top: 6px;
+    margin-bottom: 6px;
+}
